# sparc-rsd

./: .gitignore  ReadMe.md  pyproject.toml
src/_internal/: rebase_base_class.py
src/common/: fancy_colormap.py  matplotlib_canvas.py  read_dicom_data.py
src/e1/: Task.md  _module_loader.py  joint.py  kinematics.py  math.py  visualize.py
src/e1/solution/: joint.py  math.py
src/e2/: Task.md  _module_loader.py  ik_solver.py  inverse_kinematics.py
src/e2/solution/: ik_solver.py  joint.py
src/e3/: ik_solver.py  joint.py
src/e4/: Task.md  _module_loader.py  dipole.py  magnetism.py
src/e4/solution/: dipole.py
src/e5/: Task.md  xray.py
src/e6/: _module_loader.py  base_filter.py  filter.py  ui.py  visualize.py
src/e6/solution/: base_filter.py  filter.py
src/e7/: Tasks.md  _module_loader.py  bowyer_watson.py  delaunay.py  triangulation.py
src/e7/solution/: bowyer_watson.py
src/e9/: Tasks.md  _module_loader.py  icp.py  registration.py
src/e9/solution/: icp.py
